<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="controller"
            type="com.whitedog.foldableactivity.ui.motion_layout_guides.MotionLayoutGuidesContract.Controller" />

        <variable
            name="viewModel"
            type="com.whitedog.foldableactivity.ui.motion_layout_guides.MotionLayoutGuidesViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_motion_layout_guides_root"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.motion_layout_guides.MotionLayoutGuidesActivity">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/toolbar"
                style="@style/Widget.MaterialComponents.Toolbar.Primary"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                android:minHeight="?attr/actionBarSize"
                app:navigationIcon="@drawable/ic_back_24"
                app:onNavigationClick="@{() -> controller.onBackClick()}"
                app:title="@string/motion_layout_guides" />

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.constraintlayout.motion.widget.MotionLayout
            android:id="@+id/cl_motion_layout_guides_content"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layoutDescription="@xml/activity_motion_layout_guides_xml_constraintlayout_scene"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appbar">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cl_motion_layout_guides_flat"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintBottom_toTopOf="@+id/rg_motion_layout_guides_tabletop"
                app:layout_constraintEnd_toStartOf="@+id/rg_motion_layout_guides_book"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/normal_content"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ReactiveGuide
                android:id="@+id/rg_motion_layout_guides_tabletop"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:reactiveGuide_animateChange="true"
                app:reactiveGuide_applyToAllConstraintSets="true"
                app:reactiveGuide_valueId="@id/rg_motion_layout_guides_tabletop"
                app:layout_constraintGuide_end="0dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent" />

            <androidx.constraintlayout.widget.ReactiveGuide
                android:id="@+id/rg_motion_layout_guides_book"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:reactiveGuide_animateChange="true"
                app:reactiveGuide_applyToAllConstraintSets="true"
                app:reactiveGuide_valueId="@id/rg_motion_layout_guides_book"
                app:layout_constraintGuide_end="0dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cl_motion_layout_guides_tabletop"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:background="#0000ff"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rg_motion_layout_guides_tabletop">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tabletop_content"
                    android:textColor="#ffffff"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cl_motion_layout_guides_book"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:background="#ff0000"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/rg_motion_layout_guides_book"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/book_content"
                    android:textColor="#ffffff"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.constraintlayout.motion.widget.MotionLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>